Fix styling warnings and improve colour contrast ratios

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ html {
 }
 
 body {
+  background-color: inherit;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   color: #433237;
@@ -35,7 +36,7 @@ h1 {
 h2 {
   font-family: 'Amiko', sans-serif;
   text-transform: uppercase;
-  color: #bd8c8c;
+  color: #BB8888;
   font-size: 2em;
   font-weight: 600;
   line-height: 1.5em;
@@ -48,7 +49,7 @@ h3 {
 
 h4 {
   font-family: 'Amiko', sans-serif;
-  color: #a5a0a1;
+  color: #7e7278;
 }
 
 h5 {
@@ -267,7 +268,6 @@ nav a:active {
 footer {
   background-color: #f0e4e4;
   padding: 50px 10px;
-  padding-bottom: 80px;
   clear: both;
 }
 
@@ -441,7 +441,8 @@ margin: 20px 0;
 
 /* Quest page*/
 #quest main {
-  padding: 50px, 0;
+  padding-top: 250px;
+  padding-bottom: 150px;
 }
 
 .scroll-button {
@@ -557,9 +558,6 @@ Small-Medium devices (400px and larger)
     height: 90vh;
   }
 
-  #hero p {
-    padding: 2em, 0;
-  }
 
   #work {
     padding: 4em 0;
@@ -596,7 +594,8 @@ Small-Medium devices (400px and larger)
     visibility: hidden;
     position: absolute;
     top: 300px;
-    left: 330px;
+    left: 300px;
+    min-width: 200px;
     width: 100%;
   }
 
@@ -675,6 +674,7 @@ Small-Medium devices (400px and larger)
     margin-left: auto;
     margin-right: auto;
     padding-top: 30px;
+    padding-bottom: 50px;
   }
 
 
@@ -723,9 +723,6 @@ Small-Medium devices (400px and larger)
     line-height: 1.5em;
   }
 
-  #hero p {
-    padding: 0.75em, 0;
-  }
 
   #about-page footer h1 {
     max-width: 1200px;
@@ -735,7 +732,7 @@ Small-Medium devices (400px and larger)
 
   /* Contact-page */
   #contact-page main {
-    padding-top: 12em;
+    padding-top: 210px;
     padding-bottom: 40px;
   }
 
@@ -806,12 +803,12 @@ Small-Medium devices (400px and larger)
   }
 
   #hero {
-    padding-top: 9em;
+    padding-top: 7em;
   }
 
   /* Contact-page */
   #contact-page main {
-    padding-top: 18em;
+    padding-top: 280px;
     padding-bottom: 40px;
   }
 }
